[Bug Fixes] changed syntax causing compilation error